Integration with API ok

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,25 +9,38 @@
 
 <ion-content class="content-default">
 
-  <div class="margin-top-20 logo">
+  <div class="logo">
   </div>
 
-  <ion-searchbar #inputSearch class="margin-top-20" (ionInput)="filterItems($event)" placeholder="Para onde você quer ir?"
+  <div class="margin-top-40 text-center" *ngIf="inputSearch.value === ''">
+    <span class="help-text">Digite o seu destino no campo abaixo.</span>
+  </div>
+  <ion-searchbar #inputSearch class="margin-top-10" (ionInput)="filterItems($event)" placeholder="Para onde você quer ir?"
     full></ion-searchbar>
-  <div class="padding-10" *ngIf="inputSearch.value !== '' && items?.length !== 0">
+  <ion-list class="margin-10">
+    <ion-item (click)="openMap()">
+      <ion-icon name="md-map" color="secondary" item-start></ion-icon>
+      Escolher no mapa
+    </ion-item>
+  </ion-list>
+  <div class="text-center padding-10">
+    <button *ngIf="inputSearch.value === ''" ion-button full color="secondary" (click)="showStops ? showStops = false : showStops = true">VER TODAS AS PARADAS</button>
+  </div>
+  <div class="padding-10" *ngIf="(inputSearch.value !== '' && items?.length !== 0) || showStops">
     <span>Clique na opção desejada:</span>
   </div>
-  <div class="padding-10 text-center" *ngIf="inputSearch.value !== '' && items?.length === 0">
-    <span>Nenhum resultado para a busca, tente outro termo!</span>
-  </div>
-  <ion-list *ngIf="inputSearch.value !== ''">
-    <ion-item *ngFor="let parada of items" (click)="openMap(parada.id)">
+  <ion-card *ngIf="inputSearch.value !== '' && items?.length === 0">
+    <ion-card-header>
+      Oops!
+    </ion-card-header>
+    <ion-card-content>
+      Nenhum resultado para a busca, tente outro termo!
+    </ion-card-content>
+  </ion-card>
+  <ion-list *ngIf="inputSearch.value !== '' || showStops">
+    <ion-item *ngFor="let parada of items">
       {{ parada.nome }}
     </ion-item>
   </ion-list>
-
-  <div class="padding-10 text-center" *ngIf="inputSearch.value === ''">
-    <span class="help-text">Digite o seu destino no campo acima para ver resultados.</span>
-  </div>
 
 </ion-content>
