--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- Google Maps API -->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyBh9lEPrEkvtnr1Ig2tGMdQ9EMujn_N0LY"></script>
+  <script src="http://maps.google.com/maps/api/js?libraries=geometry&key=AIzaSyBh9lEPrEkvtnr1Ig2tGMdQ9EMujn_N0LY"></script>
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
